--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "recharts": "^2.15.3",
     "resend": "^4.5.1",
     "tailwind-merge": "^2.2.1",
-    "undici": "5.25.3",
+    "undici": "^5.29.0",
     "uuid": "^11.1.0",
     "yup": "^1.6.1",
     "zod": "^3.22.4",
